-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
None
-
None
-
Qt Creator master branch
-
f068e1159615ee2e1140008359e998ed95c778fd
Hi,
there is a memory leak in qt4projectmanager plugin - MobileAppWizard
src/plugins/qt4projectmanager/wizards/mobileappwizard.h:
class MobileAppWizardPrivate *m_d;
src/plugins/qt4projectmanager/wizards/mobileappwizard.cpp:
MobileAppWizard::MobileAppWizard()
: Core::BaseFileWizard(parameters())
, m_d(new MobileAppWizardPrivate)
MobileAppWizard::~MobileAppWizard()
{
delete m_d->mobileApp;
}
So m_d is created but never deleted.
As a fix - perhaps QScopedPointer.