Mobile Wizard: Fix memory leak.

Task-number: QTCREATORBUG-2343